--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <div class="container">
         <div class="card">
-            1
+            <div class="image">
+                <img src="images/germanshepard.jpg" alt="german shepard">
+            </div>
         </div>
         <div class="card">2</div>
         <div class="card">3</div>
