not yet achieved goal

--- a/index.html
+++ b/index.html
@@ -9,13 +9,53 @@
 </head>
 <body>
     <div class="container">
-        <div class="card">
-            <div class="image">
-                <img src="images/germanshepard.jpg" alt="german shepard">
-            </div>
+        <div class="card--dog">
+            <header class="head">
+                <img src="images/rottweiler.jpg" alt="" class="img">
+                <div class="text"> 
+                    <h3>DOG 1</h3>
+                    <P>rottweiler</P>
+                </div>
+            </header>
+            <p class="ptext">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Magnam debitis dolore pariatur dolorem sapiente
+                 odit nesciunt quod inventore, quidem maxime voluptas, 
+                 cumque ipsa est modi dolor. Numquam eaque adipisci mollitia!
+            </p>
         </div>
-        <div class="card">2</div>
-        <div class="card">3</div>
+
+        <div class="card--dog">
+            <header class="head">
+                <img src="images/rottweiler.jpg" alt="">
+                <div class="text"> 
+                    <h3>DOG 2</h3>
+                    <P>rottweiler</P>
+                </div>
+            </header>
+            <p class="ptext">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Magnam debitis dolore pariatur dolorem sapiente
+                 odit nesciunt quod inventore, quidem maxime voluptas, 
+                 cumque ipsa est modi dolor. Numquam eaque adipisci mollitia!
+            </p>
+        </div>
+
+        <div class="card--dog">
+            <header class="head">
+                <img src="images/germanshepard.jpg" alt="">
+                <div class="text"> 
+                    <h3>DOG 3</h3>
+                    <P>rottweiler</P>
+                </div>
+            </header>
+            <p class="ptext">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Magnam debitis dolore pariatur dolorem sapiente
+                 odit nesciunt quod inventore, quidem maxime voluptas, 
+                 cumque ipsa est modi dolor. Numquam eaque adipisci mollitia!
+            </p>
+        </div>
     </div>
 </body>
 </html>
